--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express:run": "vue-cli-service express:run"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.7",
