链接mySQL并实现增删改查

--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "nodemon srv/index.js",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "dev": "nodemon srv/index.js",
+    "dev": "vue-cli-service serve",
     "express": "vue-cli-service express:watch",
     "express:run": "vue-cli-service express:run"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.4.5",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.7",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -38,6 +40,7 @@
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-express": "^1.0.2",
     "vue-template-compiler": "^2.6.11"
   },
